@@ -1,3 +1,3 @@
 Dirk-Jan C. Binnema <djcb@dds.nl>
-Arjan Scherpenisse  <acscherp@wins.uva.nl>
-
+Arjan Scherpenisse <acscherp@wins.uva.nl>
+Colin Watson <cjwatson@debian.org>
